src/test/deca/codegen/invalid/divZero.deca
{
    int a = 0;
    int b = 6;
    int c = b/a;
}
//ERROR message_erreur